Upgrades
- Spring Boot 3.3
- Java 21
- added verify workflow