@@ -1,7 +1,5 @@
 package org.gol.taskmanager.domain.fib;
 
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.gol.taskmanager.domain.manager.WorkerManagerPort;
 
 import java.util.List;
@@ -9,7 +7,9 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 import static org.gol.taskmanager.domain.fib.FibWorkerData.ofFibWorkerData;
 
@@ -30,7 +30,7 @@ class FibManager implements FibPort {
                 .filter(NATURAL_NUMBER)
                 .distinct()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
         log.info("Starting task {} of FIBONACCI series calculation for: {}", taskId, inList);
 
         inList.stream()
